--- a/views/add-product.html
+++ b/views/add-product.html
@@ -7,6 +7,7 @@
     <title>Add product</title>
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/product.css" />
+    <script src="/scripts/addProduct.js" defer></script>
   </head>
   <body>
     <header class="main-header">
