--- a/views/add-product.html
+++ b/views/add-product.html
@@ -7,6 +7,7 @@
     <title>Add product</title>
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/product.css" />
+    <link rel="stylesheet" href="/css/forms.css" />
     <script src="/scripts/addProduct.js" defer></script>
   </head>
   <body>
@@ -27,7 +28,7 @@
           <label for="title">Title</label>
           <input type="text" name="tite" id="title" />
         </div>
-        <button type="submit">Add Product</button>
+        <button class="btn" type="submit">Add Product</button>
       </form>
     </main>
   </body>
