--- a/views/add-product.html
+++ b/views/add-product.html
@@ -26,7 +26,7 @@
       <form class="product-form" action="/admin/add-product" method="POST">
         <div class="form-control">
           <label for="title">Title</label>
-          <input type="text" name="tite" id="title" />
+          <input type="text" name="title" id="title" />
         </div>
         <button class="btn" type="submit">Add Product</button>
       </form>
