--- a/views/shop.pug
+++ b/views/shop.pug
@@ -1,23 +1,13 @@
-doctype html
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=edge")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title #{ docTitle }
-        link(rel="stylesheet", href="/css/main.css")
-        link(rel="stylesheet", href="/css/product.css")
-    body 
-        //- this will create a header element with main-header class 
-        header.main-header
-            nav.main-header__nav
-                ul.main-header__item-list
-                    li.main-header__item 
-                        a.active(href="/") Shop 
-                    li.main-header__item 
-                        a(href="/admin/add-product") Add Product 
+extends layouts/main-layout.pug 
 
-        main 
+block style 
+    link(rel="stylesheet", href="/css/product.css")
+    link(rel="stylesheet", href="/css/forms.css")
+    link(rel="stylesheet", href="/css/main.css")
+
+block content  
+    main    
+        if products.length > 0
             //- automatically a div 
             .grid 
                 each product in products
@@ -31,3 +21,5 @@ html(lang="en")
                             p.product__description A description 
                         .card__actions 
                             button.btn Add to Cart
+        else 
+            h1 No products!
