--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -1,6 +1,6 @@
-<%- include('includes/head.ejs') %>
+<%- include('../includes/head.ejs') %>
   <body>
-    <%- include('includes/navigation.ejs')%>
+    <%- include('../includes/navigation.ejs')%>
 
     <main>
       <% if (products.length > 0) { %>
@@ -32,4 +32,4 @@
       <h1>No Products Found!</h1>
       <% } %>
     </main>
-<%- include('includes/end.ejs') %>
+<%- include('../includes/end.ejs') %>
